--- a/devops/flink.html
+++ b/devops/flink.html
@@ -146,7 +146,7 @@
                         Creación de los contenedores con Docker: 
                     </div>
                     <div class="comandos">
-                        <input type="text" class="text" value="sudo podman run -it --rm --name contenedor1 --hostname nodo1 ubuntu:latest" oninput="ajustarAncho(this)">
+                        <input type="text" class="text" value="sudo podman run  --privileged -it --rm --name contenedor1 --hostname nodo1 -p 8081:8081 ubuntu:latest" oninput="ajustarAncho(this)">
                         <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                         Instalar las dependencias en los contenedores: 
                     </div>
                     <div class="comandos">
-                        <input type="text" class="text" value="apt update && apt install -y nano wget curl openjdk-11-jdk" oninput="ajustarAncho(this)">
+                        <input type="text" class="text" value="apt update && apt install -y nano wget curl openjdk-11-jdkapt openssh-client openssh-server iproute2 netcat-openbsd iputils-ping" oninput="ajustarAncho(this)">
                         <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
@@ -322,11 +322,189 @@ nodo3
                     <li>∘ <marcador class="resaltado8">192.168.88.153</marcador>: TaskManager</li>
                 </ul>
                 <h6>Configuración de los nodos workers</h6>
-                <h6>Iniciar el clúster</h6>
+                <p>⌭ Modifica el archivo de configuración, estableciendo el valor del campo host en la sección de taskmanager con el nombre del host del contenedor. Para hacerlo, utiliza el siguiente comando: <marcador class="subrayado">nano /opt/flink-2.0.0/conf/config.yaml</marcador>.</p>
+                <p>❏ Configurar el nodo 2.</p>
+                <div id="terminal">
+                    <section id="terminal__bar">
+                        <div id="bar__buttons">
+                        <button class="bar__button" id="bar__button--exit">&#10005;</button>
+                        <button class="bar__button">&#9633;</button>
+                        <button class="bar__button">&#9472;</button>
+                        </div>
+                        <p id="bar__user">ryuzak1@ubuntu: ~</p>
+                    </section>
+                    <section id="terminal__body">
+                        <div id="terminal__prompt">
+                        <span id="terminal__prompt--command"><marcador class="user">ryuzak1@ubuntu:</marcador><marcador class="location">~</marcador><marcador class="bling">$&nbsp;</marcador><marcador class="sudo"></marcador><marcador class="tool">nano</marcador> /opt/flink-2.0.0/conf/config.yaml <marcador class="param"></marcador></span>    
+                        </div>
+                        <div class="command-response-container">
+                            <span id="terminal__prompt--response" class="multiline-text">
+taskmanager:
+# The host interface the TaskManager will bind to. By default, this is localhost, and will prevent
+# the TaskManager from communicating outside the machine/container it is running on.
+# On YARN this setting will be ignored if it is set to 'localhost', defaulting to 0.0.0.0.
+# On Kubernetes this setting will be ignored, defaulting to 0.0.0.0.
+#
+# To enable this, set the bind-host address to one that has access to an outside facing network
+# interface, such as 0.0.0.0.
+bind-host: 0.0.0.0
+# The address of the host on which the TaskManager runs and can be reached by the JobManager and
+# other TaskManagers. If not specified, the TaskManager will try different strategies to identify
+# the address.
+#
+# Note this address needs to be reachable by the JobManager and forward traffic to one of
+# the interfaces the TaskManager is bound to (see 'taskmanager.bind-host').
+#
+# Note also that unless all TaskManagers are running on the same machine, this address needs to be
+# configured separately for each TaskManager.
+host: nodo2
+# The number of task slots that each TaskManager offers. Each slot runs one parallel pipeline.
+numberOfTaskSlots: 2
+memory:
+    process:
+    # The total process memory size for the TaskManager.
+    #
+    # Note this accounts for all memory usage within the TaskManager process, including JVM metaspace and other overhead.
+    # To exclude JVM metaspace and overhead, please, use total Flink memory size instead of 'taskmanager.memory.process.size'.
+    # It is not recommended to set both 'taskmanager.memory.process.size' and Flink memory.
+    size: 1728m                              
+                            </span>
+                        </div>
+                    </section>
+                </div>
+                <p>❏ Verificar los cambios:</p>
+                <div id="terminal">
+                    <section id="terminal__bar">
+                        <div id="bar__buttons">
+                        <button class="bar__button" id="bar__button--exit">&#10005;</button>
+                        <button class="bar__button">&#9633;</button>
+                        <button class="bar__button">&#9472;</button>
+                        </div>
+                        <p id="bar__user">ryuzak1@ubuntu: ~</p>
+                    </section>
+                    <section id="terminal__body">
+                        <div id="terminal__prompt">
+                        <span id="terminal__prompt--command"><marcador class="user">ryuzak1@ubuntu:</marcador><marcador class="location">~</marcador><marcador class="bling">$&nbsp;</marcador><marcador class="sudo"></marcador><marcador class="tool">cat</marcador> /opt/flink-2.0.0/conf/config.yaml | <marcador class="tool">grep</marcador> <marcador class="param">-vE</marcador> '^\s*#|^\s*$' | <marcador class="tool">grep</marcador> <marcador class="param">-vE</marcador> 'env|java|opts|all'</span>    
+                        </div>
+                        <div class="command-response-container">
+                            <span id="terminal__prompt--response" class="multiline-text">jobmanager:
+bind-host: 0.0.0.0
+rpc:
+    address: nodo1
+    port: 6123
+memory:
+    process:
+    size: 1600m
+execution:
+    failover-strategy: region
+taskmanager:
+bind-host: 0.0.0.0
+host: nodo2
+numberOfTaskSlots: 2 
+rest:
+  address: nodo1
+  bind-address: 0.0.0.0
+                            </span>
+                        </div>
+                    </section>
+                </div>
+                <p>❏ Configurar el nodo 3.</p>
+                <div id="terminal">
+                    <section id="terminal__bar">
+                        <div id="bar__buttons">
+                        <button class="bar__button" id="bar__button--exit">&#10005;</button>
+                        <button class="bar__button">&#9633;</button>
+                        <button class="bar__button">&#9472;</button>
+                        </div>
+                        <p id="bar__user">ryuzak1@ubuntu: ~</p>
+                    </section>
+                    <section id="terminal__body">
+                        <div id="terminal__prompt">
+                        <span id="terminal__prompt--command"><marcador class="user">ryuzak1@ubuntu:</marcador><marcador class="location">~</marcador><marcador class="bling">$&nbsp;</marcador><marcador class="sudo"></marcador><marcador class="tool">nano</marcador> /opt/flink-2.0.0/conf/config.yaml <marcador class="param"></marcador></span>    
+                        </div>
+                        <div class="command-response-container">
+                            <span id="terminal__prompt--response" class="multiline-text">
+taskmanager:
+# The host interface the TaskManager will bind to. By default, this is localhost, and will prevent
+# the TaskManager from communicating outside the machine/container it is running on.
+# On YARN this setting will be ignored if it is set to 'localhost', defaulting to 0.0.0.0.
+# On Kubernetes this setting will be ignored, defaulting to 0.0.0.0.
+#
+# To enable this, set the bind-host address to one that has access to an outside facing network
+# interface, such as 0.0.0.0.
+bind-host: 0.0.0.0
+# The address of the host on which the TaskManager runs and can be reached by the JobManager and
+# other TaskManagers. If not specified, the TaskManager will try different strategies to identify
+# the address.
+#
+# Note this address needs to be reachable by the JobManager and forward traffic to one of
+# the interfaces the TaskManager is bound to (see 'taskmanager.bind-host').
+#
+# Note also that unless all TaskManagers are running on the same machine, this address needs to be
+# configured separately for each TaskManager.
+host: nodo3
+# The number of task slots that each TaskManager offers. Each slot runs one parallel pipeline.
+numberOfTaskSlots: 2
+memory:
+    process:
+    # The total process memory size for the TaskManager.
+    #
+    # Note this accounts for all memory usage within the TaskManager process, including JVM metaspace and other overhead.
+    # To exclude JVM metaspace and overhead, please, use total Flink memory size instead of 'taskmanager.memory.process.size'.
+    # It is not recommended to set both 'taskmanager.memory.process.size' and Flink memory.
+    size: 1728m                              
+                            </span>
+                        </div>
+                    </section>
+                </div>
+                <p>❏ Verificar los cambios:</p>
+                <div id="terminal">
+                    <section id="terminal__bar">
+                        <div id="bar__buttons">
+                        <button class="bar__button" id="bar__button--exit">&#10005;</button>
+                        <button class="bar__button">&#9633;</button>
+                        <button class="bar__button">&#9472;</button>
+                        </div>
+                        <p id="bar__user">ryuzak1@ubuntu: ~</p>
+                    </section>
+                    <section id="terminal__body">
+                        <div id="terminal__prompt">
+                        <span id="terminal__prompt--command"><marcador class="user">ryuzak1@ubuntu:</marcador><marcador class="location">~</marcador><marcador class="bling">$&nbsp;</marcador><marcador class="sudo"></marcador><marcador class="tool">cat</marcador> /opt/flink-2.0.0/conf/config.yaml | <marcador class="tool">grep</marcador> <marcador class="param">-vE</marcador> '^\s*#|^\s*$' | <marcador class="tool">grep</marcador> <marcador class="param">-vE</marcador> 'env|java|opts|all'</span>    
+                        </div>
+                        <div class="command-response-container">
+                            <span id="terminal__prompt--response" class="multiline-text">jobmanager:
+bind-host: 0.0.0.0
+rpc:
+    address: nodo1
+    port: 6123
+memory:
+    process:
+    size: 1600m
+execution:
+    failover-strategy: region
+taskmanager:
+bind-host: 0.0.0.0
+host: nodo3
+numberOfTaskSlots: 2 
+rest:
+  address: nodo1
+  bind-address: 0.0.0.0
+                            </span>
+                        </div>
+                    </section>
+                </div>
+                <p>Cuando levantas Flink en varios contenedores Docker, es mejor usar Kubernetes, Docker Compose o scripts de inicio manuales, evitando por completo SSH entre contenedores. En estos casos, deberías iniciar manualmente los servicios:</p>
                 <div class="contenedor">
-                    <div class="etiqueta">Inicia el clúster de Flink:</div>
+                    <div class="etiqueta">El nodo 1 para el JobManager:</div>
                     <div class="comandos">
-                        <input type="text" class="text" value="./bin/start-cluster.sh" oninput="ajustarancho(this)">
+                        <input type="text" class="text" value="./opt/flink-2.0.0/bin/jobmanager.sh start" oninput="ajustarancho(this)">
+                        <button><i class="fa fa-clone"></i><span> copy</span></button>
+                    </div>
+                </div>
+                <div class="contenedor">
+                    <div class="etiqueta">Los nodos 2 y 3 para cada TaskManager:</div>
+                    <div class="comandos">
+                        <input type="text" class="text" value="./opt/flink-2.0.0/bin/taskmanager.sh start" oninput="ajustarancho(this)">
                         <button><i class="fa fa-clone"></i><span> copy</span></button>
                     </div>
                 </div>
@@ -341,8 +519,62 @@ nodo3
                 </div>
                 <p>En esa interfaz deberías poder ver los TaskManagers conectados, el estado del JobManager y otros detalles de monitoreo.</p>
                 <p>También puedes revisar los logs en el directorio <marcador class="resaltado1">log/</marcador> para diagnosticar cualquier problema o asegurarte de que todos los nodos se hayan conectado correctamente.</p>
-                <br>
-                <br>
+                <div class="blog-image-zoom">
+                    <img src="media/flink7.png" alt="">
+                </div>
+                <h6>Iniciar el clúster por ssh</h6>
+                <div class="contenedor">
+                    <div class="etiqueta">Asegúrate de que el directorio de runtime de SSH existe:</div>
+                    <div class="comandos">
+                        <input type="text" class="text" value="mkdir -p /var/run/sshd" oninput="ajustarancho(this)">
+                        <button><i class="fa fa-clone"></i><span> copy</span></button>
+                    </div>
+                </div>
+                <div class="contenedor">
+                    <div class="etiqueta">Opcionalmente, cambia el password de root (si quieres acceso con usuario root) en los nodos 2 y 3:</div>
+                    <div class="comandos">
+                        <input type="text" class="text" value="echo 'root:toor' | chpasswd" oninput="ajustarancho(this)">
+                        <button><i class="fa fa-clone"></i><span> copy</span></button>
+                    </div>
+                </div>
+                <div class="contenedor">
+                    <div class="etiqueta">Edita el archivo de configuración de SSH:</div>
+                    <div class="comandos">
+                        <input type="text" class="text" value="nano /etc/ssh/sshd_config" oninput="ajustarancho(this)">
+                        <button><i class="fa fa-clone"></i><span> copy</span></button>
+                    </div>
+                </div>
+                <p>Y asegúrate de tener estas líneas (descomenta y modifica si es necesario):</p>
+                <div class="archivo">
+PermitRootLogin yes
+PasswordAuthentication yes                   
+                </div>
+                <div class="contenedor">
+                    <div class="etiqueta">Iniciar el servicio SSH:</div>
+                    <div class="comandos">
+                        <input type="text" class="text" value="service ssh start" oninput="ajustarancho(this)">
+                        <button><i class="fa fa-clone"></i><span> copy</span></button>
+                    </div>
+                </div>
+                <div class="contenedor">
+                    <div class="etiqueta">Inicia el clúster de Flink en el nodo maestro:</div>
+                    <div class="comandos">
+                        <input type="text" class="text" value="./bin/start-cluster.sh" oninput="ajustarancho(this)">
+                        <button><i class="fa fa-clone"></i><span> copy</span></button>
+                    </div>
+                </div>
+                <h2>Ejemplo de Uso</h2>
+                <p>El ejemplo WordCount.jar que viene con Apache Flink es una demostración clásica del procesamiento de datos. Su propósito es contar cuántas veces aparece cada palabra en un texto. Al ejecutar el comando con el JAR y el parámetro --output, Flink lanza un job que procesa líneas de texto, las divide en palabras y suma cuántas veces se repite cada una, escribiendo los resultados en un archivo.</p>
+                <p>Internamente, el programa toma una fuente de datos (como un archivo o texto que llega por red), la transforma en palabras individuales mediante una función flatMap, y luego agrupa y suma las apariciones por palabra usando keyBy y sum. Finalmente, los resultados se envían a una salida, como un archivo de texto especificado por el usuario.</p>
+                <p>Este ejemplo muestra cómo Flink permite construir pipelines de procesamiento distribuidos usando transformaciones funcionales. Es útil para entender cómo Flink trabaja con flujos de datos y tareas paralelas en un entorno real.</p>
+                <div class="contenedor">
+                    <div class="etiqueta">Ese comando ejecuta un job de Flink en modo batch o streaming (según el ejemplo) usando el JAR proporcionado, y guarda los resultados en un archivo.</div>
+                    <div class="comandos">
+                        <input type="text" class="text" value="./opt/flink-2.0.0/bin/flink run /opt/flink-2.0.0/examples/streaming/WordCount.jar --output /root/flink.txt" oninput="ajustarancho(this)">
+                        <button><i class="fa fa-clone"></i><span> copy</span></button>
+                    </div>
+                </div>
+                
             </div>
         </div>       
     </main>
